<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/text_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".view.detail.MovieDetailActivity"
    tools:showIn="@layout/activity_movie_detail">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/infoView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/imgMovie"
                    android:layout_width="120dp"
                    android:layout_height="150dp"
                    android:layout_weight="0"
                    android:scaleType="fitCenter" />

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/txtTitle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/title"
                        android:textSize="18sp"
                        android:textStyle="bold"
                        tools:text="Test Data" />

                    <TextView
                        android:id="@+id/txtYear"
                        android:layout_width="wrap_content"
                        android:layout_height="0dp"
                        android:layout_marginTop="8dp"
                        android:layout_weight="1"
                        android:text="@string/year"
                        android:textSize="18sp"
                        android:textStyle="italic"
                        tools:text="Test Data"
                        tools:ignore="NestedWeights" />

                    <TextView
                        android:id="@+id/txtRate"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:text="@string/rate"
                        android:textSize="18sp"
                        android:textStyle="italic"
                        tools:text="Test Data" />

                    <TextView
                        android:id="@+id/txtLanguages"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:text="@string/languages"
                        android:textSize="16sp"
                        android:textStyle="italic"
                        tools:text="Test Data" />
                </LinearLayout>
            </LinearLayout>

            <TextView
                android:id="@+id/txtProductionCountries"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/production_countries"
                android:textSize="16sp"
                android:textStyle="normal"
                tools:text="Test Data" />

            <TextView
                android:id="@+id/txtProductionCompanies"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/production_companies"
                android:textSize="16sp"
                android:textStyle="normal"
                tools:text="Test Data" />

            <TextView
                android:id="@+id/txtBudget"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/budget"
                android:textSize="16sp"
                android:textStyle="normal"
                tools:text="Test Data" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="16dp"
                android:background="@color/colorGrey"/>
            <TextView
                android:id="@+id/txtOverView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/overview"
                android:textSize="14sp"
                android:textStyle="normal"
                tools:text="Test Data" />
        </LinearLayout>

        <ProgressBar
            android:id="@+id/pbLoading"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="gone"/>
    </RelativeLayout>


</androidx.core.widget.NestedScrollView>